# star_wars_characters_classifier

./: .flake8  .gitignore  .pre-commit-config.yaml  README.md  docker-compose.yml  pyproject.toml
.dvc/: config
.github/workflows/: ci.yml
configs/: config.yaml
configs/data/: star_wars.yaml
configs/export/: onnx.yaml
configs/infer/: default.yaml
configs/mlflow/: local.yaml
configs/model/: resnet18.yaml
configs/train/: default.yaml
scripts/: export_tensorrt.sh
star_wars_characters/: cli.py
star_wars_characters/data/: dataset.py  download.py  prepare.py
star_wars_characters/export/: export_onnx.py
star_wars_characters/infer/: predict.py
star_wars_characters/models/: backbone.py  lit_module.py
star_wars_characters/train/: callbacks.py  datamodule.py  train.py
star_wars_characters/utils/: dvc_utils.py  git.py  images.py  mlflow_serving.py
tests/: test_images.py
